--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
     <title>
-      <strong>Friend Trip</strong>
-    </title>
+      <strong>
+  Friend Trip
+    <strong/>
+  </title>
   </head>
 <body>
   <h1>
@@ -33,7 +35,7 @@
             </p>
       </h5>
       <h6>
-        Activities
+        <strong>Activities</strong>
         <br />
         <ul>
           <li>
